adding ribbon and excel events

--- a/speedsheet/speedsheet.csproj
+++ b/speedsheet/speedsheet.csproj
@@ -77,4 +77,9 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="AddinModule.resx">
+      <DependentUpon>AddinModule.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
